# pykuwahara

./: .cursorignore  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
examples/: lena.py  paint-effect.py  selfie.py
src/pykuwahara/: __init__.py  kuwahara.py
tests/: test_golden_regression.py  test_kuwahara.py
tests/golden/: manifest.json
tests/golden/data/: checker2d_u8.npy  checker2d_u8_gaussian_r2.npy  checker2d_u8_mean_r2.npy  gradient2d_f32.npy  gradient2d_f32_mean_r2.npy  stripes3d_u8.npy  stripes3d_u8_gaussian_r2.npy  stripes3d_u8_image2d_lab_l.npy  stripes3d_u8_mean_r2.npy  stripes3d_u8_mean_r2_image2d_lab_l.npy
tools/: regen_golden.py
