[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykuwahara"
version = "0.4.0"
description = "Kuwahara filter in python"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
authors = [{ name = "J. Melka", email = "yoch.melka@gmail.com" }]
keywords = ["kuwahara", "image-processing", "opencv", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage = "https://github.com/yoch/pykuwahara"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pykuwahara = ["py.typed"]

[tool.coverage.run]
branch = true
source_pkgs = ["pykuwahara"]

[tool.coverage.report]
fail_under = 85
show_missing = true
